--- a/static/index.html
+++ b/static/index.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Code Learning Platform</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/monokai.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100">
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/monokai.min.css"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body class="bg-gray-100">
     <nav class="bg-blue-600 text-white p-4">
-        <div class="container mx-auto">
-            <h1 class="text-2xl font-bold">AI Code Learning Platform</h1>
-        </div>
+      <div class="container mx-auto">
+        <h1 class="text-2xl font-bold">AI Code Learning Platform</h1>
+      </div>
     </nav>
 
     <main class="container mx-auto p-4">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <!-- Lessons Section -->
-            <div class="bg-white p-4 rounded-lg shadow">
-                <h2 class="text-xl font-bold mb-4">Available Lessons</h2>
-                <div id="lessons-list" class="space-y-4"></div>
-            </div>
-
-            <!-- Coding Section -->
-            <div class="bg-white p-4 rounded-lg shadow">
-                <h2 class="text-xl font-bold mb-4">Code Editor</h2>
-                <textarea id="code-editor"></textarea>
-                <button id="review-button" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-                    Get AI Review
-                </button>
-                <div id="feedback" class="mt-4 p-4 bg-gray-100 rounded hidden"></div>
-            </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <!-- Lessons Section -->
+        <div class="bg-white p-4 rounded-lg shadow">
+          <h2 class="text-xl font-bold mb-4">Available Lessons</h2>
+          <div id="lessons-list" class="space-y-4"></div>
         </div>
+
+        <!-- Coding Section -->
+        <div class="bg-white p-4 rounded-lg shadow">
+          <h2 class="text-xl font-bold mb-4">Code Editor</h2>
+          <textarea id="code-editor"></textarea>
+          <button
+            id="review-button"
+            class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
+          >
+            Get AI Review
+          </button>
+          <div id="feedback" class="mt-4 p-4 bg-gray-100 rounded hidden"></div>
+        </div>
+      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/python/python.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
