--- a/static/login.html
+++ b/static/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - AI Code Learning Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-md w-96">
@@ -22,20 +22,26 @@
                     class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
             </div>
             <div class="flex items-center justify-between">
-                <a href="forgot-password.html" class="text-sm text-blue-600 hover:text-blue-500">Forgot password?</a>
+                <a href="forgot-password" class="text-sm text-blue-600 hover:text-blue-500">Forgot password?</a>
+                
             </div>
-            <button type="submit"
-                class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            <button type="submit" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                 Sign in
             </button>
         </form>
         <div class="mt-4 text-center">
             <p class="text-sm text-gray-600">
-                Don't have an account? 
-                <a href="register.html" class="font-medium text-blue-600 hover:text-blue-500">Sign up</a>
+                Don't have an account? <a href="register" class="text-sm text-blue-600 hover:text-blue-500">Sign up</a>
             </p>
         </div>
     </div>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <!-- Your Firebase config and auth files -->
+    <script src="firebase-config.js"></script>
     <script src="auth.js"></script>
 </body>
 </html>
